[metadata]
name = pyCensus
version = 0.0.1
author = Aaron Finocchiaro
author_email = afinny10@gmail.com
description = A Python library to parse and data from the US Census API
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/a-finocchiaro/pyCensus
download_url = https://github.com/a-finocchiaro/pyCenses/archive/refs/tags/0.0.1.zip #TODO: fix this
keywords = Pandas, Census, Bureau
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    pyCensus
install_requires =
    pandas
    beautifulsoup4
    requests
python_requires= >=3.7
